# taskmaster__Rust

./: Cargo.toml  README.md
config/: def copy.sconfig  def.sconfig  forever.sconfig  ls3.sconfig  only_read_dirs.sconfig  taskmaster_conf.ini  taskmaster_conf.json  taskmaster_conf3.json
docs/: taskmaster_cheatsheet.md
log/: debug_stderr  debug_stdout  script_stdout
old/: default_conf.json  nix_process_try   pgms.rs  pss.json  taskmaster_conf2.json
prgms/: forever.sh
scripts/: create_private_dirs.sh  forever.sh  return_code_66.sh
src/: main.rs
src/utils/: config_parser.rs  mod.rs  parser.rs  pgms.rs  process.rs  process_async.rs  terminal.rs
test_docs/file_state/: too_many_chars.sconfig
test_docs/parser_tests/: correct1.sconfig  file.stderr  file.stdout  small.txt
