[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
shellwords = "1.1.0"
nix = { version = "0.28.0", features = ["process"] }
#procfs = "0.16.0"
tokio = "1.36.0"
libc = "0.2"
chrono = "0.4"
sysinfo = "0.30.6"
itertools = "0.12.1"
[profile.release]
panic = 'unwind'